--- a/sites/all/themes/employmentlaw/css/style.css
+++ b/sites/all/themes/employmentlaw/css/style.css
@@ -1512,11 +1512,11 @@ cite.fn {text-transform:uppercase;}
 
 /*---FORM STUFF---*/
 
-input[type="text"] {padding: 5px; width:170px; margin:5px 5px 0 0;  border: 1px solid #ccc;}
+input[type="text"] {padding: 5px; width:170px; margin:5px 5px 0 0;  border: 1px solid #ccc;color:#000 !important;}
 
-input[type="password"] {padding: 5px; width:170px; margin:5px 5px 0 0;  border: 1px solid #ccc;}
+input[type="password"] {padding: 5px; width:170px; margin:5px 5px 0 0;  border: 1px solid #ccc;color:#000 !important;}
 
-textarea {padding: 4px; width:90%; font:12px arial; border: 1px solid #ccc; margin: 5px 0 0;}
+textarea {padding: 4px; width:90%; font:12px arial; border: 1px solid #ccc; margin: 5px 0 0;color:#000 !important;}
 
 
 
@@ -2672,3 +2672,7 @@ display: block;
 .search-results .title{margin: 0px 0px 0px 0px !important; width:100% !important}
 
 .search-results .search-snippet-info {font: normal 11px verdana;color: #555;line-height: 18px;}
+
+input[type="email"]{color:#000 !important;}
+
+textarea {color:#000 !important;}
